protocols: rename UNSATISFIABLE materialization constraint to INCOMPATIBLE
The UNSATISFIABLE constraint enum variant was poorly named - it actually
indicates that a field is currently incompatible but the condition could
be resolved with a back-fill. This commit renames it to INCOMPATIBLE to
better reflect its actual semantics.

To maintain compatibility with JSON-encoded protobuf messages, UNSATISFIABLE
is kept as an additional variant with a different protobuf tag (7) that is
interpreted as an alias of INCOMPATIBLE.

All uses of "Unsatisfiable" terminology throughout the codebase have been
updated to use "Incompatible" instead.

--- a/crates/validation/tests/materialization_constraints_on_excluded_fields.yaml
+++ b/crates/validation/tests/materialization_constraints_on_excluded_fields.yaml
@@ -53,6 +53,6 @@ driver:
         - constraints:
             flow_document: { type: 1, reason: "location required" }
             id: { type: 1, reason: "location required" }
-            naughty_u: { type: 6, reason: "field unsatisfiable" }
+            naughty_u: { type: 6, reason: "field incompatible" }
             naughty_f: { type: 5, reason: "field forbidden" }
           resourcePath: [anything]
