protocols/validation: add support for case-insensitive field selection
Some systems, like BigQuery, support cased fields in their information
schema but prohibit table columns that differ only in casing.

This could be handled through the `folded_field` mechanism, but this is
more work for the connector and it also discards meaningful information
about how the field is represented in the endpoint -- information we may
want to use one day.

So, add a new `case_insensitive_fields` field in the binding response
that allows a connector to opt-in to new case-insensitive field
selection logic, which is also implemented.

--- a/crates/validation/src/field_selection.fixture.yaml
+++ b/crates/validation/src/field_selection.fixture.yaml
@@ -144,6 +144,7 @@ model:
     nested: { cfg: 42 }
   exclude:
     - an_extra
+case_insensitive: false
 validated:
   ABool: { type: FIELD_OPTIONAL }
   ADateTime: { type: FIELD_OPTIONAL }
