validation: enable new field-selection
Replace legacy selection with the new field selection implementation.

Rework validation errors, consolidating to a FieldConflict variant and
removing FieldIncompatible and LocationUnsatisfiable, adding
SourceCollectionWasReset, and a wrapping AbortOnIncompatibleSchemaChange
error that can embed SourceCollectionWasReset or FieldConflict.

--- a/crates/dekaf/tests/fixtures/field_selection_specific_fields.yaml
+++ b/crates/dekaf/tests/fixtures/field_selection_specific_fields.yaml
@@ -31,4 +31,6 @@ materializations:
         fields:
           include:
             field_a: {}
+          exclude:
+            - flow_document
           recommended: false
