DO NOT MERGE: flowctl raw cleanup-ops-journals
Adds a script for cleaning up old ops collection journals in cronut. These were
left over from tasks that are deleted. This requires a json file with all the
existing task names in cronut, so that it doesn't delete those journals.  I
used the following query to get that:

```
select ls.catalog_name
from live_specs ls
join data_planes dp on ls.data_plane_id = dp.id
where dp.data_plane_name = 'ops/dp/public/gcp-us-central1-c1'
and (
  spec_type = any('{capture, materialization}')
  or (spec_type = 'collection' and spec->'derive' is not null)
)
order by ls.catalog_name;
```

The script won't delete any journals unless they're fully suspended and the
task name does _not_ exist in those query results. In total, it's expected to
delete about 20k journals.

--- a/crates/flowctl/Cargo.toml
+++ b/crates/flowctl/Cargo.toml
@@ -72,6 +72,7 @@ tracing-subscriber = { workspace = true }
 url = { workspace = true }
 uuid = { workspace = true }
 warp = { workspace = true }
+percent-encoding = { workspace = true }
 
 [dev-dependencies]
 assert_cmd = { workspace = true }
