validation: allow collection keys to change
Introduce a new Error::GroupByChanged and remove Error::CollectionKeyChanged.
Collection keys may now be changed without altering the collection
generation.

Note that the garden path for discovers (where
`evolveIncompatibleCollections: true` -- we should probably update this
name) *does* inject a collection reset when it observes a change in
collection key, but we're now able to support changes to collection keys
that don't require full resets and associated capture backfills.

The error check is now pushed down onto standard materialization bindings,
which cannot tolerate a change in group-by key without a
drop-and-recreate. With the new `groupBy` field, users have the choice
of a manual override via a `groupBy` set to the prior key, or using
`onIncompatibleSchemaChange` handling (backfill / disable / abort).

Delta-updates materializations don't care if the key changes, which
improves the function of audit / history tables in the presence of
changing collection keys.

--- a/crates/validation/tests/group_by_conflicts.yaml
+++ b/crates/validation/tests/group_by_conflicts.yaml
@@ -4,12 +4,9 @@ test://example/catalog.yaml:
       schema:
         type: object
         properties:
-          f_required: { type: integer }
-          f_loc_required: { type: integer }
-          f_optional: { type: integer }
-          f_forbidden: { type: integer }
-          f_incompatible: { type: integer }
-      key: [/f_required]
+          f_one: { type: integer }
+          f_two: { type: integer }
+      key: [/f_one, /f_two] # Changed from just /f_one.
 
   materializations:
     the/materialization:
@@ -35,7 +32,7 @@ driver:
       controlId: "11:11:11:11:11:11:11:04"
       dataPlaneId: "1d:1d:1d:1d:1d:1d:1d:1d"
       lastPubId: "10:10:10:10:10:10:10:10"
-      key: [/f_required]
+      key: [/f_one]
 
   liveMaterializations:
     the/materialization:
@@ -44,7 +41,7 @@ driver:
       lastPubId: "10:10:10:10:10:10:10:10"
       bindings: *the_bindings
       lastFields:
-        - keys: [f_required]
+        - keys: [f_one]
 
   materializations:
     the/materialization:
@@ -54,9 +51,6 @@ driver:
         config: {}
       bindings:
         - constraints:
-            f_required: { type: 1, reason: "I'm a required field" }
-            f_loc_required: { type: 2, reason: "I'm a required location" }
-            f_optional: { type: 4, reason: "I'm an optional field" }
-            f_forbidden: { type: 5, reason: "I'm a forbidden fruit" }
-            f_incompatible: { type: 6, reason: "I'm an incompatible field" }
+            f_one: { type: 4, reason: "optional" }
+            f_two: { type: 4, reason: "optional" }
           resourcePath: [a]
