dekaf: split out dekaf-connector crate
This helps us avoid a dependency cycle. The main `dekaf` crate depends on
`flow-client` in order to fetch authorizations and such.  But the `runtime`
crate needed to depend on the `dekaf::connector` module in order to run
validations at build time.  This created a scenario where building the server
(`control-plane-api`) would require first building `flow-client`.  We'd like to
avoid that, so that `flow-client` can depend on `control-plane-api` in order to
generate the graphql schema.

This splits out the `dekaf::connector` module into a separate `dekaf-connector`
crate, which does not depend on `flow-client`.

--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -11,6 +11,7 @@ license.workspace = true
 
 [dependencies]
 allocator = { path = "../allocator" }
+dekaf-connector = { path = "../dekaf-connector" }
 avro = { path = "../avro" }
 doc = { path = "../doc" }
 extractors = { path = "../extractors" }
