--- a/crates/runtime/Cargo.toml
+++ b/crates/runtime/Cargo.toml
@@ -13,7 +13,7 @@ assemble = { path = "../assemble" }
 async-process = { path = "../async-process" }
 connector-init = { path = "../connector-init" }
 coroutines = { path = "../coroutines" }
-dekaf = { path = "../dekaf" }
+dekaf-connector = { path = "../dekaf-connector" }
 derive-sqlite = { path = "../derive-sqlite" }
 doc = { path = "../doc", features = ["combine"] }
 extractors = { path = "../extractors" }
@@ -41,7 +41,7 @@ tuple = { path = "../tuple" }
 unseal = { path = "../unseal" }
 
 anyhow = { workspace = true }
-aws-config = { workspace = true}
+aws-config = { workspace = true }
 aws-sdk-sts = { workspace = true }
 aws-credential-types = { workspace = true }
 bytes = { workspace = true }
