flowctl: add raw subcommand to fetch firing alerts
This is a POC of using the graphql API from flowctl, using the `graphql_client`
crate.  This is a `raw` subcommand because it's likely we'll want to improve
the UX before encouraging users to use this.

The basic integration is done by adding a `build.rs` script to the
`flow-client` crate, which writes gets the graphql schema from
`control-plane-api` and writes it out to
`crates/flow-client/control-plane-api.graphql`.  The `graphql_client` crate
uses that schema file along with a graphql query to generate rust types.

--- a/crates/flow-client/Cargo.toml
+++ b/crates/flow-client/Cargo.toml
@@ -8,6 +8,9 @@ homepage.workspace = true
 repository.workspace = true
 license.workspace = true
 
+[build-dependencies]
+control-plane-api = { path = "../control-plane-api" }
+
 [dependencies]
 gazette = { path = "../gazette" }
 models = { path = "../models" }
@@ -17,7 +20,9 @@ proto-gazette = { path = "../proto-gazette" }
 
 anyhow = { workspace = true }
 base64 = { workspace = true }
+chrono = { workspace = true }
 futures = { workspace = true }
+graphql_client = { workspace = true }
 jsonwebtoken = { workspace = true }
 lazy_static = { workspace = true }
 page-turner = { workspace = true }
