--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ futures = "0.3"
 futures-core = "0.3"
 futures-util = "0.3"
 fxhash = "0.2" # Used in `json` crate. Replace with xxhash.
+graphql_client = "*"
 hex = "0.4.3"
 hexdump = "0.1"
 humantime = "2.1"
