doc/simd-doc: update `rkyv` from 0.7 => 0.8
This rkyv upgrade includes breaking changes to the API and
serialization format that need to be accounted for.

`simd-doc` in particular required updates to its transcoding
implementation, to remain compatible with `rkyv` wire format.

The upgrade also includes some nice benefits:
- Slightly longer inline strings (7 => 8)
- Platform-independent serialization format

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -126,7 +126,7 @@ rocksdb = { version = "0.22", default-features = false, features = [
     "snappy",
     "rtti",
 ] }
-rkyv = { version = "0.7", features = ["archive_le"] }
+rkyv = { version = "0" }
 rsasl = { version = "2.1.0", default-features = false, features = [
     "provider",
     "config_builder",
