CI: use sqlx offline mode in CI
A significant change that was introduced as part of graphql is that the
`flow-client` crate now depends on the `control-plane-api` crate in order to
build. This means that crates like flowctl and dekaf now need to build
control-plane-api in CI, which fails because postgres isn't running.

The fix is to use `cargo sqlx prepare --merged` to generate `sqlx-data.json`,
and then build using `SQLX_OFFLINE=1`. This command will need to be run
manually whenever queries are updated in our rust source code.

--- a/.github/workflows/dekaf-ci.yaml
+++ b/.github/workflows/dekaf-ci.yaml
@@ -17,6 +17,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   RUSTFLAGS: "-C link-arg=-fuse-ld=lld"
+  SQLX_OFFLINE: "1"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
