--- a/.github/workflows/flowctl-test.yaml
+++ b/.github/workflows/flowctl-test.yaml
@@ -23,3 +23,5 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - name: Run tests
         run: cargo test -p flowctl
+        env:
+          SQLX_OFFLINE: "1"
