doc: add doc::redact module for schema-driven redaction
Introduces a new redaction feature that allows data to be
redacted from JSON documents based on `redact` schema annotations.

The implementation supports two strategies:
- Block: Removes the annotated node entirely from the document
- Sha256: Replaces string values with their SHA-256 hash digest

--- a/crates/doc/Cargo.toml
+++ b/crates/doc/Cargo.toml
@@ -26,6 +26,7 @@ rkyv = { workspace = true }
 schemars = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+sha2 = { workspace = true }
 tempfile = { workspace = true }
 thiserror = { workspace = true }
 time = { workspace = true }
