--- a/Cargo.toml
+++ b/Cargo.toml
@@ -143,6 +143,7 @@ serde_json = { version = "1.0", features = ["raw_value", "float_roundtrip"] }
 serde_yaml = "0.8"
 serde-transcode = "1.1"
 serde-wasm-bindgen = "0.6.5"
+sha2 = "0"
 size = "0.4"
 socket2 = "0.5.7"
 strsim = "0.10"
