--- a/crates/models/Cargo.toml
+++ b/crates/models/Cargo.toml
@@ -13,6 +13,7 @@ license.workspace = true
 
 anyhow = { workspace = true }
 async-graphql = { workspace = true, optional = true }
+base64 = { workspace = true }
 bytes = { workspace = true }
 futures = { workspace = true, optional = true }
 indexmap = { workspace = true, optional = true }
