--- a/crates/validation/Cargo.toml
+++ b/crates/validation/Cargo.toml
@@ -31,6 +31,7 @@ superslice = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
+xxhash-rust = { workspace = true }
 
 [dev-dependencies]
 coroutines = { path = "../coroutines" }
