validation: use and enforce storage mapping data planes for task assignment
Storage mappings already included a data_planes field that wasn't being used.
This change activates that functionality - tasks are now assigned to data planes
based on their storage mapping's data_planes list, with the first entry as default.
Users can still explicitly override with a specific data plane if needed.

Key changes:
- Remove `is_default` field from data planes table
- Enforce that tasks use data planes from their storage mapping's list
- Use first data plane in storage mapping as default for task initialization
- Add explicit_plane parameter to allow user overrides (validated against mapping)
- Validate alignment between partition and recovery storage mappings
- Add better error messages when data planes are missing or mismatched

--- a/crates/validation/tests/model.yaml
+++ b/crates/validation/tests/model.yaml
@@ -286,8 +286,7 @@ test://example/int-string-len.schema:
 
 driver:
   dataPlanes:
-    "1d:1d:1d:1d:1d:1d:1d:1d":
-      default: true
+    "1d:1d:1d:1d:1d:1d:1d:1d": {}
 
   materializations:
     testing/webhook/deliveries:
@@ -393,6 +392,7 @@ driver:
   storageMappings:
     testing/:
       stores: [{ provider: S3, bucket: data-bucket }]
+      data_planes: ["ops/dp/public/test-1d1d1d1d1d1d1d1d"]
     recovery/testing/:
       stores: [{ provider: GCS, bucket: recovery-bucket, prefix: some/ }]
     not-matched/:
@@ -406,6 +406,7 @@ driver:
             account_tenant_id: mozzarella,
           },
         ]
+      data_planes: ["ops/dp/public/test-1d1d1d1d1d1d1d1d"]
 
 test://example/array-key.schema:
   # This schema models array additionalItems which provably exist,
